deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workorders-server
  labels:
    app.kubernetes.io/name: workorders
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: workorders
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
